--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@tinymce/tinymce-react": "^6.1.0",
     "axios": "^1.9.0",
+    "country-flag-icons": "^1.5.19",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
