--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "paystack-api": "^2.0.6",
+    "stripe": "^18.3.0"
   }
 }
